// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root instance methods componentDidMount should call action creators 1`] = `
Array [
  Object {
    "activity": "",
    "attachments": "/assets/attachments.json",
    "channels": "/assets/channels.json",
    "classifiers": "/assets/classifiers.json",
    "editor": "/flow/editor",
    "environment": "/assets/environment.json",
    "fields": "/assets/fields.json",
    "flows": "/assets/flows.json",
    "globals": "/assets/globals.json",
    "groups": "/assets/groups.json",
    "labels": "/assets/labels.json",
    "languages": "/assets/languages.json",
    "recents": "/assets/recents.json",
    "recipients": "/assets/recipients.json",
    "resthooks": "/assets/resthooks.json",
    "revisions": "/assets/revisions.json",
    "simulateResume": "",
    "simulateStart": "",
    "templates": "/assets/templates.json",
    "ticketers": "/assets/ticketers.json",
  },
  "a4f64f1b-85bc-477e-b706-de313a022979",
  undefined,
]
`;

exports[`Root render should apply translating style if passed a truthy translating prop 1`] = `
<PageVisibility
  onChange={[Function]}
>
  <div
    className="translating"
    data-spec="editor-container"
    id="editor-container"
  >
    <div
      className="footer"
    >
      <div
        className="download_button"
      >
        <Button
          name="Download"
          onClick={[Function]}
          type="primary"
        />
      </div>
    </div>
    <div
      className="editor"
      data-spec="editor"
    >
      <RevisionExplorer
        assetStore={null}
        createNewRevision={[MockFunction]}
        loadFlowDefinition={[MockFunction]}
        onToggled={[Function]}
        popped={null}
      />
      <div
        id="portal-root"
      />
      <div
        id="canvas-portal"
      />
    </div>
  </div>
</PageVisibility>
`;

exports[`Root render should render flow if passed a definition, language 1`] = `
<PageVisibility
  onChange={[Function]}
>
  <div
    data-spec="editor-container"
    id="editor-container"
  >
    <div
      className="footer"
    >
      <div
        className="download_button"
      >
        <Button
          name="Download"
          onClick={[Function]}
          type="primary"
        />
      </div>
    </div>
    <div
      className="editor"
      data-spec="editor"
    >
      <Connect(Flow) />
      <RevisionExplorer
        assetStore={null}
        createNewRevision={[MockFunction]}
        loadFlowDefinition={[MockFunction]}
        onToggled={[Function]}
        popped={null}
      />
      <div
        id="portal-root"
      />
      <div
        id="canvas-portal"
      />
    </div>
  </div>
</PageVisibility>
`;

exports[`Root render should render self, children with required props 1`] = `
<PageVisibility
  onChange={[Function]}
>
  <div
    data-spec="editor-container"
    id="editor-container"
  >
    <div
      className="footer"
    >
      <div
        className="download_button"
      >
        <Button
          name="Download"
          onClick={[Function]}
          type="primary"
        />
      </div>
    </div>
    <div
      className="editor"
      data-spec="editor"
    >
      <RevisionExplorer
        assetStore={null}
        createNewRevision={[MockFunction]}
        loadFlowDefinition={[MockFunction]}
        onToggled={[Function]}
        popped={null}
      />
      <div
        id="portal-root"
      />
      <div
        id="canvas-portal"
      />
    </div>
  </div>
</PageVisibility>
`;
